# QualiCode

./: LICENSE  README.md  csv_utils.py  metrics.py  pinecone_utils.py  pyproject.toml  requirements.txt  run.py
cq/: __init__.py  check_code_quality.py  cli.py  code_extractor.py  csv_utils.py  metrics.py  pyproject.toml  settings.py  time_debugger.py  train.py
cq/general_score/: __init__.py  code_checker.py  train.py
cq/general_score/datasets/: training_data_main07_effort03.csv
cq/general_score/models/diff-l_0.0120231203-235824/: fingerprint.pb  saved_model.pb
cq/naming/: __init__.py  code_checker.py  dictionary.py  vectorizer.py  writer.py
cq/naming/datasets/: freq_used_words.csv
cq/smells/: __init__.py  code_checker.py  train.py
cq/smells/datasets/: Python_LongMethodSmell_Dataset.csv
cq/smells/models/: large_class_l0.10_d20231202_t163418.keras  long_method_l0.04_d20231202_t163426.keras
cq/smells/models/large_class_l0.06_d20231130_t111126/: fingerprint.pb
cq/smells/models/large_class_l0.06_d20231202_t122740/: fingerprint.pb
cq/smells/models/large_class_l0.07_d20231130_t111023/: fingerprint.pb
cq/smells/models/large_class_l0.07_t20231130-110849/: fingerprint.pb  saved_model.pb
cq/smells/models/large_class_l0.10_d20231202_t163418/: fingerprint.pb  saved_model.pb
cq/smells/models/large_class_l0.11_d20231204_t092506/: fingerprint.pb  saved_model.pb
cq/smells/models/long_method_l0.04_d20231202_t163426/: fingerprint.pb
cq/smells/models/long_method_l0.05_d20231130_t111026/: fingerprint.pb
main-l_0.0120231106-225925/: fingerprint.pb  (+2 more)
(+77 files in other folders)
