[tool.poetry]
name = "qualicode"
version = "0.1.0"
description = ""
authors = ["Daryna Rodicheva <daryna.r@gowombat.team>"]

[tool.poetry.dependencies]
python = "^3.9"
radon = "^6.0.1"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cq = "cli:run"
